--- a/Peer Assessement.Rmd
+++ b/Peer Assessement.Rmd
@@ -1,6 +1,6 @@
 # Peer Assessement
 
-### This is where the enthusiastic student I am starts ro learn R markdown.
+## This is where the enthusiastic student I am starts ro learn R markdown.
 
 First bit of code changes the options so that the code will always be available 
 in the markdown document.
@@ -10,15 +10,62 @@ library(knitr)
 opts_chunk$set(echo = TRUE)
 ```
 
-1. Code for reading in the dataset and/or processing the data
+###1. Code for reading in the dataset and/or processing the data
 
 ```{r}
 actiData<- read.csv("activity.csv")
-actiData$date<- as.Date(actiData$date, "%Y %m %d ")
+actiData$date<- as.Date(actiData$date, "%Y-%m-%d ")
 ```
 
-2. Histogram of the total number of steps taken each day
+###2. Histogram of the total number of steps taken each day
 ```{r}
 library(ggplot2)
+graph1<- ggplot(actiData, aes(date, steps, ))
+graph1+ geom_bar(stat = "identity", na.rm = TRUE, fill = "dodgerblue4")
 
 ```
+
+###3.Mean and median number of steps taken each day
+
+```{r}
+library(dplyr)
+actiDataDay<- group_by(actiData,date)
+results <-summarise(actiDataDay, meanS = mean(steps, na.rm = TRUE), medianS = median(steps, na.rm = TRUE) )
+print(results, n = 20)
+maxMean<- which.max(results$meanS)
+maxMedian<- which.max(results$medianS)
+
+```
+
+The maximum mean is ` maxMean `. Du to a lot of "0", most medians are "0" and the biggest median is `maxMedian`
+
+### 4.Time series plot of the average number of steps taken
+
+```{r}
+plot(results$date, results$meanS, col= "red")
+
+```
+
+###3.The 5-minute interval that, on average, contains the maximum number of steps
+```{r}
+actiDataInterval<- group_by(actiData, interval)
+actiDataInterval<- summarise(actiDataInterval, meansteps =mean(steps, na.rm = TRUE))
+# That interval is interval found on line :
+which.max(actiDataInterval$meansteps)
+
+
+```
+###6.Code to describe and show a strategy for imputing missing data
+
+```{r}
+#Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+sum(is.na(actiData))
+
+#Devise a strategy for filling in all of the missing values in the dataset.
+
+
+```
+
+
+
+
