--- a/Peer Assessement.Rmd
+++ b/Peer Assessement.Rmd
@@ -61,11 +61,30 @@ which.max(actiDataInterval$meansteps)
 #Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 sum(is.na(actiData))
 
-#Devise a strategy for filling in all of the missing values in the dataset.
+#Devise a strategy for filling in all of the missing values in the dataset + Create a new dataset that is equal to the original dataset but with the missing data filled in
 
+```{r}
+meantot<- mean(actiData$steps, na.rm = T)
+actiData$newSteps <- actiData$steps
+actiData$newSteps[is.na(actiData$newSteps)]<- meantot
+```
+### 7. Histogram of the total number of steps taken each day after missing values are imputed
+```{r}
+tempoDat<- aggregate(steps ~ date, actiData, sum)
+hist(tempoDat$steps)
 
 ```
 
+### 8.Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
+```{r}
+actiData<- mutate(actiData, Day = weekdays(actiData$date))
+actiData<- mutate(actiData, weekend= ifelse(actiData$Day == c("Saturday", "Sunday"), "weekend", "week"))
+tempoDat2 <- group_by(actiData, interval, weekend)
+tempoDat2<- summarise(tempoDat2, mean(steps, na.rm = TRUE))
+graph2<- ggplot(tempoDat2, aes(interval, `mean(steps, na.rm = TRUE)`, color = weekend))
+graph2 + geom_bar(stat = "identity") + facet_grid(.~ tempoDat2$weekend)
+
+```
 
 
 
